--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Salt of the Sea</h1>
 <h2>Natural skin care products inspired by the ocean</h2>
+<div class="home-image">
 <%= image_tag("deo-creme-1597048_960_720.jpg", class: "img-responsive") %>
+</div>
