--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -18,6 +18,9 @@ nav ul li {
 nav ul li a {
   color: #fff;
 }
+nav ul li a:visited {
+  color: #fff;
+}
 .page-wrap {
   min-height: 100%;
   margin-bottom: -70px;
@@ -34,6 +37,7 @@ h1 {
   font-size: 4vw;
   font-weight: 700;
   text-align: center;
+  border: 4px solid #A37A8A;
 }
 h2 {
   font-family: Sacramento, cursive;
@@ -46,6 +50,7 @@ p {
   font-size: 1.9vw;
   font-weight: 700;
   letter-spacing: 0.1em;
+  line-height: 1.5em;
 }
 .home-image {
   margin: auto;
@@ -53,6 +58,7 @@ p {
   padding: 10px;
 }
 footer {
+  width: 100%;
   padding: 15px;
   background-color: #A2D4DE;
   color: #fff;
