--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,9 +1,18 @@
-th {
-  padding: 25px;
+.container-fluid {
+  background-image: url(/images/matthew-kane-278419-unsplash.jpg);
+}
+.product_name {
+  padding: 10px;
+  border: none;
   font-family: Poiret One, Geneva, sans-serif;
   font-size: 2vw;
-  background-color: #fff;
-  border-radius: 5px;
-}// Place all the styles related to the products controller here.
+}
+.product_description {
+  background-color: #A37A8A;
+  color: #fff;
+  font-family: Zeyada, cursive;
+  font-weight: 400;
+}
+// Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
