--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -3,6 +3,10 @@
 }
 html, body {
   background-color: #F5E9DC;
+  background-image: url("matthew-kane-278419-unsplash.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   height: 100%;
 }
 nav {
@@ -40,7 +44,7 @@ h1 {
   border: 4px solid #A37A8A;
 }
 h2 {
-  font-family: Sacramento, cursive;
+  font-family: Zeyada, cursive;
   font-size: 4vw;
   text-align: center;
 }
