--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,29 +2,34 @@
 
 <h1>The Sea Salt Collection</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="container-fluid">
+  <div class="row">
+    <% @products.each do |product| %>
+      <div class="col-sm-2 col-md-4 col-lg-4">
+        <%= image_tag(product.image_url, class: "img-responsive") %>
+        <a href="#"><h1 class="product_name"><%= product.name %></h1></a>
+        <p class="product_description"><%= product.description %></p>
+        <strong>$<%= product.price %></strong>
+      </div><!--end col-->
+    <% end %>
+  </div><!--end row-->
+</div><!--end container-->
 
-  <tbody>
+
+  <!-- <tbody>
     <% @products.each do |product| %>
       <tr>
         <td><%= product.name %></td>
         <td><%= product.description %></td>
         <td><%= product.image_url %></td>
+        <td><%= product.colour %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
-</table>
+</table> -->
 
 <br>
 
