--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,5 +15,15 @@
   <%= @product.image_url %>
 </p>
 
+<p>
+  Colour:
+  <%= @product.colour %>
+</p>
+
+<p>
+  <strong>Price:</strong>
+  <%= @product.price %>
+</p>
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
