--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,12 +5,7 @@
 <div class="container-fluid">
   <div class="row">
     <% @products.each do |product| %>
-      <div class="col-sm-2 col-md-4 col-lg-4">
-        <%= image_tag(product.image_url, class: "img-responsive") %>
-        <a href="#"><h1 class="product_name"><%= product.name %></h1></a>
-        <p class="product_description"><%= product.description %></p>
-        <strong>$<%= product.price %></strong>
-      </div><!--end col-->
+      <%= render @products %>
     <% end %>
   </div><!--end row-->
 </div><!--end container-->
@@ -34,8 +29,3 @@
 <br>
 
 <%= link_to 'New Product', new_product_path %>
-<!-- <% paragraph_number = 1 %>
-<% 5.times do %>
-  <p>This is paragraph number <%= paragraph_number %></p>
-  <% paragraph_number = paragraph_number + 1 %>
-<% end %> -->
