--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -1,2 +1,33 @@
-<h2>Featured Product:</h2>
-<%= @featured_product.name %>
+<h2 class="feat_product">Featured Products:</h2>
+<!-- <%= @featured_product.name %> -->
+
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <% @featured_product.each do |product| %>
+    <li data-target="#carousel-example-generic" data-slide-to="<% @featured_product.each %>" class="<%= "active" if product == @featured_product.first %>"></li>
+    <% end %>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <% @featured_product.each do |product| %>
+    <div class="item<%= " active" if product == @featured_product.first %>">
+      <%= image_tag(product.image_url, class: "d-block w-100") %>
+      <div class="carousel-caption">
+        <%= product.name %>
+      </div>
+    </div>
+    <% end %>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
