--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "About", simple_pages_about_path %></li>
         <li><%= link_to "Contact", simple_pages_contact_path %></li>
+        <li><%= link_to "Products", products_path %></li>
+        <li><%= link_to "Featured Products", simple_pages_landing_page_path %></li>
       </ul>
     </nav>
     <div class="page-wrap">
