--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -24,6 +24,26 @@ nav ul li a {
 nav ul li a:visited {
   color: #fff;
 }
+form.form-horizontal {
+  display: inline;
+  float: right;
+}
+.navbar-form {
+  margin-top: -75px;
+}
+.navbar-text {
+  border-radius: 4px;
+  padding: 2px;
+  font-family: Verdana, sans-serif;
+  font-size: 1.2vw;
+}
+.navbar-btn {
+  display: inline-block;
+  float: right;
+  margin-bottom: 12px;
+  font-family: Verdana, sans-serif;
+  font-size: 1.2vw;
+}
 
 //Main Content
 h1 {
@@ -98,6 +118,11 @@ footer {
   color: #fff;
   font-size: 1.4vw;
   text-align: center;
+}
+//NEW PRODUCT
+.field, .actions {
+  margin-left: 15px;
+  color: #000;
 }
 //Sticky footer
 .page-wrap {
