--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -111,6 +111,42 @@ a:visited {
   width: 80%;
   padding: 10px;
 }
+
+//CONTACT
+.form-group {
+  width: 80%;
+  margin: auto;
+}
+.form-button {
+  width: 80%;
+  margin: auto;
+}
+.form_label{
+  margin: 5px 0px;
+  padding: 10px 15px;
+  border-radius: 4px;
+}
+//NEW PRODUCT
+.field, .actions {
+  margin-left: 15px;
+  color: #000;
+}
+
+//Thank You
+.panel, .panel-default {
+  width: 70%;
+  margin: auto;
+  background-color: rgba(255, 255, 255, 0.4);
+}
+a.back-link {
+  text-align: right;
+  font-family: Verdana, sans-serif;
+  font-size: 0.5em;
+  font-weight: 200;
+  text-decoration: underline;
+  color: #000;
+}
+//Sticky footer
 footer {
   width: 100%;
   padding: 15px;
@@ -119,12 +155,6 @@ footer {
   font-size: 1.4vw;
   text-align: center;
 }
-//NEW PRODUCT
-.field, .actions {
-  margin-left: 15px;
-  color: #000;
-}
-//Sticky footer
 .page-wrap {
   min-height: 100%;
   margin-bottom: -70px;
