--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,15 @@
         <li><%= link_to "Products", products_path %></li>
         <li><%= link_to "Featured Products", simple_pages_landing_page_path %></li>
       </ul>
+      <ul class="nav pull-right">
+        <li class="log">
+        <% if user_signed_in? %>
+          <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+        <% else %>
+          <%= link_to('Login', new_user_session_path) %>
+        <% end %>
+        </li>
+      </ul>
       <ul class="navbar-form navbar-right" role="search">
         <%= form_with(url: products_path, method: 'get', local: true, html: {class: "form-horizontal"}) do |form| %>
         <li><%= form.text_field :q, id: 'q', value: params[:q], type: "text", class: "navbar-text", size: "22", placeholder: "Search for products..." %></li>
@@ -30,7 +39,8 @@
       </ul>
     </nav>
     <div class="page-wrap">
-    <%= yield %>
+      <p class="notice"><%= notice %></p>
+      <%= yield %>
     </div><!--end page-wrap-->
     <footer class="site-footer">
       &copy; 2018 Salt of the Sea
