--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,16 @@
       </ul>
     </nav>
     <div class="page-wrap">
-      <p class="notice"><%= notice %></p>
+      <% if notice %>
+        <p class="alert alert-info alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <%= notice %>
+        </p>
+      <% end %>
+      <% if alert %>
+        <p class="alert alert-success alert-dismissible" role="alert"><%= alert %></p>
+      <% end %>
+
       <%= yield %>
     </div><!--end page-wrap-->
     <footer class="site-footer">
