--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,7 +1,7 @@
 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 product_wrap">
   <div class="product_content">
     <%= image_tag(product.image_url, class: "img-responsive") %>
-    <a href="#"><h1 class="product_name"><%= product.name %></h1></a>
+    <h1 class="product_name"><%= link_to product.name, product %></h1>
     <div class="product_info">
       <p class="product_description"><%= product.description %></p>
       <strong>$<%= product.price %></strong>
