--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
+
+<p id="alert"><%= alert %></p>
 <div class="row">
   <div class="col-md-8 col-xs-12">
     <p class="thumbnail">
@@ -33,7 +34,7 @@
       <%= link_to 'Edit', edit_product_path(@product) %> |
       <%= link_to 'Back', products_path %>
     </div><!--end product_info-->
-      <%= render 'new_comment' %>
+    <%= render 'new_comment' %>
   </div><!--end col-->
   <div class="col-xs-12 col-md-12">
     <h2>Reviews</h2>
