--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -5,41 +5,58 @@ html, body {
   height: 100%;
   background-color: #F5E9DC;
 }
-a {
-  color: #000;
+//Links
+
+a:not(nav ul li a) {
+  color: #666;
 }
 a:visited {
   color: #666;
 }
-
-//Nav Bar
-nav {
-  height: 48px;
-  background: linear-gradient(60deg, #44767D, #A2D4DE);
+a:hover {
+  background-color: transparent;
 }
-.nav>li {
+.links {
   display: inline-block;
   float: right;
+  padding: 40px 80px;
+  font-family: Zeyada, cursive, serif;
+  font-size: 2.5vw;
+  font-weight: 600;
+  letter-spacing: 0.03em;
+  color: #000;
 }
-nav ul li:not(.log) {
-  display: inline-block;
+.product_link {
+  display: block;
+  position: relative;
   padding: 15px;
-  margin-left: 10px;
+}
+p .sign-up-link {
+  color: #fff;
+}
+.sign-up-link a:visited {
+  color: #fff;
+}
+//Nav Bar
+nav {
+  height: 5vw;
+  background: linear-gradient(60deg, #44767D, #A2D4DE);
+}
+ul {
+  height: 5vw;
+  width: 100%;
+}
+.navbar li {
+  display: inline-block;
+  padding: 2% 2.8% 0% 1.5%;
   font-family: Poiret One, Geneva, sans-serif;
   font-size: 1.7vw;
 }
-nav ul li a {
+.navbar li a {
   color: #fff;
 }
-nav ul li a:visited {
-  color: #000;
-}
-form.form-horizontal {
-  display: inline;
-  float: right;
-}
-.navbar-form {
-  margin-top: -75px;
+.navbar li a:visited {
+  color: #fff;
 }
 .navbar-text {
   border-radius: 4px;
@@ -47,12 +64,22 @@ form.form-horizontal {
   font-family: Verdana, sans-serif;
   font-size: 1.2vw;
 }
+.navbar-form {
+  margin-top: -1.5%;
+}
 .navbar-btn {
-  display: inline-block;
-  float: right;
-  margin-bottom: 12px;
+  margin: auto;
   font-family: Verdana, sans-serif;
   font-size: 1.2vw;
+}
+.btn.btn-default.navbar-btn {
+  margin-top: .7vw;
+}
+.navbar-toggle {
+  border: 1px solid white;
+}
+.navbar-toggle .icon-bar {
+  background-color: #fff;
 }
 
 //Main Content
@@ -94,22 +121,6 @@ p:not(p.notice) {
   font-size: 2vw;
   font-family: Poiret One, Geneva, sans-serif;
   color: black;
-}
-//Links
-.links {
-  display: inline-block;
-  float: right;
-  padding: 40px 80px;
-  font-family: Zeyada, cursive, serif;
-  font-size: 2.5vw;
-  font-weight: 600;
-  letter-spacing: 0.03em;
-  color: #000;
-}
-.product_link {
-  display: block;
-  position: relative;
-  padding: 15px;
 }
 
 //INDEX PAGE
@@ -154,19 +165,6 @@ a.back-link {
   color: #000;
 }
 
-//Sign-up/Sign-in
-.log {
-  font-family: Poiret One, Geneva, sans-serif;
-  font-size: 1.5em;
-}
-.form-group, .user-form {
-  margin: auto;
-  padding-bottom: 20px;
-  width: 15%;
-}
-input {
-  border-style: hidden;
-}
 //Sticky footer
 footer {
   width: 100%;
