--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -6,15 +6,15 @@
 <div class="row">
   <div class="form-group">
     <%= form.label :name %>
-    <%= form.text_field :name, class: "form-control", placeholder: "Enter Your Name" %>
+    <%= form.text_field :name, class: "form-control", placeholder: "Enter Your Name", type: "text", required: "required" %>
   </div><!--end form-group-->
   <div class="form-group">
     <%= form.label :email %>
-    <%= form.text_field :email, class: "form-control", placeholder: "Enter Email" %>
+    <%= form.text_field :email, class: "form-control", placeholder: "Enter Email", type: "email", required: "required" %>
   </div><!--end form-group-->
   <div class="form-group">
     <%= form.label :message %>
-    <%= form.text_area :message, class: "form-control", placeholder: "Enter Message", rows: 5 %>
+    <%= form.text_area :message, class: "form-control", placeholder: "Enter Message", rows: 5, required: "required" %>
   </div><!--end form-group-->
 </div><!--end row-->
 <div class="row form-button">
