--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the users controller here.
+//Devise forms 
+.form-group, .user-form {
+  margin: auto;
+  padding-top: 3%;
+  text-align: center;
+}// Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
