--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -1,10 +1,12 @@
 <% if signed_in? %>
     <h4>Add a review:</h4>
     <%= form_for([@product, @product.comments.build]) do |f| %>
+    <div class="field">
       <p>
         <%= f.label :body, "Comments" %><br>
-        <%= f.text_area :body %>
+        <%= f.text_area :body, class: "form-group" %>
       </p>
+    </div>
       <p>
         <div class="rating"></div>
       </p>
