--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,7 +23,7 @@
 
       <p class="product_description">
         <strong>Price: $</strong>
-        <%= @product.price %>
+        <%= number_with_precision(@product.price, precision: 2) %>
       </p>
 
       <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div></p>
@@ -31,6 +31,13 @@
         <span class="glyphicon glyphicon-thumbs-up"></span> Highest rating: <%= @product.highest_rating_comment %><br>
         <span class="glyphicon glyphicon-thumbs-down"></span> Lowest rating: <%= @product.lowest_rating_comment %>
       </p>
+
+      <p class="product_description">
+        <%= form_with(url: '/payments/create') do |form| %>
+        <%= render partial: "shared/stripe_checkout_button" %>
+        <% end %>
+      </p>
+
       <%= link_to 'Edit', edit_product_path(@product) %> |
       <%= link_to 'Back', products_path %>
     </div><!--end product_info-->
