--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -35,6 +35,7 @@
       <p class="product_description">
         <%= form_with(url: '/payments/create') do |form| %>
         <%= render partial: "shared/stripe_checkout_button" %>
+        <%= hidden_field_tag(:product_id, @product.id) %>
         <% end %>
       </p>
 
