--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -72,7 +72,7 @@ ul {
   font-family: Verdana, sans-serif;
   font-size: 1.2vw;
 }
-.btn.btn-default.navbar-btn {
+.btn.btn-primary.navbar-btn {
   margin-top: .7vw;
 }
 .navbar-toggle {
@@ -131,19 +131,26 @@ p:not(p.notice) {
 }
 
 //CONTACT
-.form-group {
+.form-group, .form-button {
   width: 80%;
   margin: auto;
 }
-.form-button {
-  width: 80%;
+.contact {
+  padding: 20px;
+  font-family: Poiret One, Geneva, sans-serif;
+  font-size: 1.7vw;
+  text-align: center;
+  color: #fff;
+}
+//Forms
+.form-control {
+  width: 60%;
   margin: auto;
 }
-.form_label{
-  margin: 5px 0px;
-  padding: 10px 15px;
-  border-radius: 4px;
+.btn-primary:not(.btn .btn-primary .navbar-btn) {
+  margin-top: 15px;
 }
+
 //NEW PRODUCT
 .field, .actions {
   margin-left: 15px;
