--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
             <li class="navbar-form" role="search">
               <%= form_with(url: products_path, method: 'get', local: true, html: {class: "form-horizontal"}) do |form| %>
               <%= form.text_field :q, id: 'q', value: params[:q], type: "text", class: "navbar-text", size: "22", placeholder: "Search for products..." %>
-              <%= form.submit 'Search', class: "btn btn-default navbar-btn" %>
+              <%= form.submit 'Search', class: "btn btn-primary navbar-btn" %>
               <% end %>
             </li>
             <li class="navbar-btn navbar-right">
