--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,32 +11,32 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :name %>
-    <%= form.text_field :name, id: :product_name, class: "form-group" %>
+    <%= form.text_field :name, id: :product_name, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_area :description, id: :product_description, class: "form-group"  %>
+    <%= form.text_area :description, id: :product_description, class: "form-control"  %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :image_url %>
-    <%= form.text_field :image_url, id: :product_image_url, class: "form-group"  %>
+    <%= form.text_field :image_url, id: :product_image_url, class: "form-control"  %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :colour %><br>
-    <%= form.text_field :colour, class: "form-group"  %>
+    <%= form.text_field :colour, class: "form-control"  %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :price %><br>
-    <%= form.text_field :price, class: "form-group"  %>
+    <%= form.text_field :price, class: "form-control"  %>
   </div>
 
-  <div class="actions">
-    <%= form.submit class: "btn btn-default"%>
+  <div class="actions form-group">
+    <%= form.submit class: "btn btn-primary"%>
   </div>
 <% end %>
