--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -1,17 +1,17 @@
 <% if signed_in? %>
     <h4>Add a review:</h4>
     <%= form_for([@product, @product.comments.build]) do |f| %>
-    <div class="field">
+    <div class="form-group">
       <p>
         <%= f.label :body, "Comments" %><br>
-        <%= f.text_area :body, class: "form-group" %>
+        <%= f.text_area :body, class: "form-control" %>
       </p>
     </div>
       <p>
         <div class="rating"></div>
       </p>
-      <p class="btn btn-default">
-        <%= f.submit "Submit" %>
+      <p>
+        <%= f.submit "Submit", class: "btn btn-primary" %>
       </p>
   <% end %>
 <% end %>
