--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -8,3 +8,5 @@
     </div><!--end product_info-->
   </div><!--end product_content-->
 </div><!--end col-->
+
+<% logger.debug "Product: #{product.name}" %>
