--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-md-8 col-xs-12">
     <p class="thumbnail">
-      <%= image_tag(@product.image_url, class: "img-responsive") %>
+      <%= image_tag(@product.image_url, class: "img-responsive img-zoom", data_zoom_image: "@product.image_url") %>
     </p>
   </div><!--end col-->
   <div class="col-md-4 col-xs-12 product_wrap">
