--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,7 +26,7 @@
         <%= number_with_precision(@product.price, precision: 2) %>
       </p>
 
-      <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div></p>
+      <p>Average Rating: <div class="rated" id="average-rating" data-score="<%= @product.average_rating %>"></div></p>
       <p class="product_description product_rating">
         <span class="glyphicon glyphicon-thumbs-up"></span> Highest rating: <%= @product.highest_rating_comment %><br>
         <span class="glyphicon glyphicon-thumbs-down"></span> Lowest rating: <%= @product.lowest_rating_comment %>
