--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,9 +7,10 @@
     </p>
   </div><!--end col-->
   <div class="col-md-4 col-xs-12 product_wrap">
-    <p class="product_name">
-      <%= @product.name %>
-    </p>
+    <% cache @product do %>
+      <p class="product_name">
+        <%= @product.name %>
+      </p>
     <div class="product_info">
       <p class="product_description">
         Description:
@@ -25,6 +26,7 @@
         <strong>Price: $</strong>
         <%= number_with_precision(@product.price, precision: 2) %>
       </p>
+    <% end %>
 
       <p>Average Rating: <div class="rated" id="average-rating" data-score="<%= @product.average_rating %>"></div></p>
       <p class="product_description product_rating">
@@ -41,12 +43,14 @@
 
       <%= link_to 'Edit', edit_product_path(@product) %> |
       <%= link_to 'Back', products_path %>
+
     </div><!--end product_info-->
     <%= render 'new_comment' %>
   </div><!--end col-->
+
   <div class="col-xs-12 col-md-12">
     <h2>Reviews</h2>
     <%= render 'comments' %>
-  </div>
+  </div><!--end col-->
 </div><!--end row-->
 <%= will_paginate @comments %>
