--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -50,6 +50,7 @@
 
   <div class="col-xs-12 col-md-12">
     <h2>Reviews</h2>
+      <p>Our Top Review: <%= @product.display_top_comment %></p>
     <%= render 'comments' %>
   </div><!--end col-->
 </div><!--end row-->
