--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,3 +1,4 @@
+<% cache comment do %>
 <div class="row">
   <hr>
   <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small>
@@ -9,3 +10,4 @@
   <div class="rated" data-score="<%= comment.rating %>"></div>
   <p><%= comment.body %></p>
 </div><!--end row-->
+<% end %>
