--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -34,6 +34,13 @@
 .product_rating {
   padding-bottom: 35px;
 }
+.product_views {
+  font-family: Poiret One, Geneva, sans-serif;
+  font-weight: 700;
+  font-size: 1.7vw;
+  color: #FF9A20;
+  text-shadow: 1px 1px #2B2828;
+}
 
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
