--- a/app/views/simple_pages/about.html.erb
+++ b/app/views/simple_pages/about.html.erb
@@ -1,10 +1,12 @@
 <h1>What Salt of the Sea is all about:</h1>
-<p>We are a natural skin care shop based in Rockport, Massachusetts, specializing
-in products that are made using plant and mineral based ingredients. We believe
-that what you use to treat your skin should be free of harmful chemicals yet still
-smell and feel pleasant. Everything we have to offer is made in small bathces by
-local artisans. Many of our products are tailored to fit different skin care needs
-using essential oils but we do have a frangrance free line as well. Of course our
-specialty is our signature sea salt collection which includes a variety of scrubs,
-bath salts, and masks.
-</p>
+<div class="about">
+  <p>We are a natural skin care shop based in Rockport, Massachusetts, specializing
+  in products that are made using plant and mineral based ingredients. We believe
+  that what you use to treat your skin should be free of harmful chemicals yet still
+  smell and feel pleasant. Everything we have to offer is made in small bathces by
+  local artisans. Many of our products are tailored to fit different skin care needs
+  using essential oils but we do have a frangrance free line as well. Of course our
+  specialty is our signature sea salt collection which includes a variety of scrubs,
+  bath salts, and masks.
+  </p>
+</div>
