--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -129,7 +129,18 @@ p:not(p.notice) {
   width: 80%;
   padding: 10px;
 }
-
+//ABOUT
+.about {
+  margin-top: 25px;
+  padding: 20px 45px;
+  font-family: Poiret One, Geneva, sans-serif;
+  font-size: 2vw;
+  font-weight: 700;
+  line-height: 2vw;
+  text-align: center;
+  text-justify: inter-word;
+  background-color: rgba(255, 255, 255, 0.4);
+}
 //CONTACT
 .form-group, .form-button {
   width: 80%;
